// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`exports absolute fill object 1`] = `
Object {
  "bottom": 0,
  "left": 0,
  "position": "absolute",
  "right": 0,
  "top": 0,
}
`;

exports[`exports absolute fill object 2`] = `
Object {
  "bottom": 0,
  "left": 0,
  "position": "relative",
  "right": 0,
  "top": 0,
}
`;

exports[`exports hairline width 1`] = `0.5`;
